k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-webserver-app
  labels:
    app: go-webserver-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-webserver-app
  template:
    metadata:
      labels:
        app: go-webserver-app
    spec:
      containers:
        - name: go-webserver-app
          image: shivam0567/go-webserver-app:v3
          ports:
            - containerPort: 8080
