k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-webserver-app
  labels:
    app: go-webserver-app
spec:
  ports:
    - port: 80         
      targetPort: 8080
      protocol: TCP
  selector:
    app: go-webserver-app
  type: ClusterIP
